Fix dark mode for redesign

--- a/projects/ticktick/modules/call-to-action/style.css
+++ b/projects/ticktick/modules/call-to-action/style.css
@@ -65,3 +65,13 @@ call-to-action .story {
 	object-fit: cover;
 	
 }
+
+@media (prefers-color-scheme: dark) {
+	call-to-action .heading {
+		color: var(--color);
+	}
+
+	#aec {
+		filter: invert(1);
+	}
+}
