--- a/projects/ticktick/modules/mast-head/style.css
+++ b/projects/ticktick/modules/mast-head/style.css
@@ -135,3 +135,14 @@ mast-head .link {
 		display: none;
 	}
 }
+
+
+
+@media (prefers-color-scheme: dark) {
+	site-header {
+	position: sticky;
+	top: 0px;
+	z-index: 10;
+	background-color: hsla(226, 95%, 20%, .90);
+	backdrop-filter: blur(5px);
+}}
